# topped

./: LICENSE  README.md  setup.cfg
topped/: __init__.py  cgenff_charmm2gmx_py3_nx2.py  read_sqm.py  tool_registry.py  topol_base.py
topped/MATCH_RELEASE/: README
topped/MATCH_RELEASE/MATCH/: ._Changes  ._README
topped/MATCH_RELEASE/MATCH/examples/2/: ._top_all35_ethers.rtf
topped/MATCH_RELEASE/MATCH/resources/: ._Incorrect_Residue_List.txt  ._top_all22_prot.par  ._top_all22_prot_extended.par  ._top_all27_na.par  ._top_all35_carb.par  ._top_all35_ethers.par  ._top_all36_cgenff.par  ._top_all36_cgenff_new.par
topped/MATCH_RELEASE/MATCH/resources/jointtops/: ._top_all27_prot_na.rtf
topped/MATCH_RELEASE/MATCH/resources/top_all22_prot/: ._par_all22_prot.prm  ._top_all22_prot.impr  ._top_all22_prot.incr  ._top_all22_prot.inp  ._top_all22_prot.patches  ._top_all22_prot.rtf  ._top_all22_prot.types  ._top_all22_prot_old.rm
topped/MATCH_RELEASE/MATCH/resources/top_all27_na/: ._top_all27_na.incr  (+10 more)
topped/MATCH_RELEASE/MATCH/t/: ._ChemicalComposition.t  ._MATCHParameters.t  ._MATCHer.t  ._ProcessOutput.t  ._TestBuildTypeStrings.t  ._TestRefinementStrings.t  ._TestRefinementStringsNew.t  ._Type.t
topped/MATCH_RELEASE/PerlChemistry/resources/: ._DefaultParameters.par
topped/MATCH_RELEASE/PerlChemistry/t/: ._Atom.t  ._BaseObject.t  ._Chain.RotatableBonds.t  ._CheckLibraries.t  ._LineParser.t  ._LookUpTable.Stringify.t  ._LookUpTable.t  ._Molecule.EnsureCorrectBondTypes.t  ._Molecule.FindResonanceStructures.t  ._Molecule.TestPatching.t  ._Molecule.t  ._Parameters.t
(+49 files in other folders)
