[wheel]
universal = 1

[metadata]
name = topped
author = Fabian Grunewald
author_email = fgrunewald.science@gmail.com
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
url = https://github.com/gruenewald-lab/topped
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = molecular dynamics force fields topology generation

[options]
packages = find:
setup-requires =
    setuptools >= 46.4.0
    pbr
install-requires =  # ?? requires-dist?
    #git+https://github.com/fgrunewald/acpype.git@add_abcg2#egg=acpype
    pbr
    numpy
    vermouth
    pysmiles
    grappa-ff
    kimmdy==6.8.3
zip-safe = False
